# CPFA_Base_ARGoS

./: .gitignore  CMakeLists.txt  evaluate_fixed_params_parallel.py  evaluate_per_minute_by_duration_parallel.py  experiments.py  experiments_3.py  experiments_3.py.bak  ga.py
experiments/: Cluster_CPFA_r24_tag256_10by10.xml  Powerlaw_CPFA_r24_tag256_10by10.xml  Random_CPFA_r24_tag256_10by10.xml  gatmp5cpx2avf.argos  gatmp5z_3fmo5.argos  gatmp6fjm2_e0.argos  gatmp6nq9m8gt.argos  gatmp6sgj1k7s.argos  gatmpa7xb2up8.argos  gatmpb7hxodpv.argos  gatmpckpl3m1w.argos  gatmpdervxhi0.argos  gatmpfcxzvnuy.argos  gatmpgq8bd_fq.argos  gatmpjdoju3c6.argos  gatmplgjymar5.argos  gatmpnrdluavi.argos  gatmpquxn17a0.argos  gatmprwzztk_8.argos  gatmptxzq1ru_.argos  gatmpwwykqrfp.argos  gatmpwx2zlhwn.argos  gatmpy1usrcfx.argos  gatmpz0kfkgsa.argos  gatmpzqxvlmgd.argos
source/CPFA/: CPFA_controller.cpp
